# MSPM0L1306-CMAKE-GCC-Template

./: CMakeLists.txt  LICENSE  README.md  TexasInstruments.MSPM0L_DFP.1.2.1.pack  openocd.cfg  ti_mspm0l1306.cfg  xds110.cfg
Core/: main.c  ncontroller.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
